lib/GSL/Special/laguerre.h

int gsl_sf_laguerre_1_e(double a,double x,double* result);
int gsl_sf_laguerre_2_e(double a,double x,double* result);
int gsl_sf_laguerre_3_e(double a,double x,double* result);
double gsl_sf_laguerre_1(double a,double x);
double gsl_sf_laguerre_2(double a,double x);
double gsl_sf_laguerre_3(double a,double x);
int gsl_sf_laguerre_n_e(int n,double a,double x,double* result);
double gsl_sf_laguerre_n(int n,double a,double x);